# whole_body_benchmark

./: .gitignore  README.md  eval_results.json  main.py  pyproject.toml  pyproject_old.toml
.claude/: .nfs0000000000e345b600001705
configs/: config.yaml
docs/: patchwork_tutorial.md
experiments/: nako_stats.ipynb
experiments/comparison/: nnunet.ipynb  stats.ipynb
experiments/patchwork_training/: patchwork_train.ipynb  patchwork_train_closer_to_nnunet.ipynb
experiments/vertebrae/: 0_import_cases.ipynb  2_make_cropped_dataset.py  3_eval.ipynb  4_eval_cropped.ipynb  crop_to_l1.py  segment_l1_totalseg.py  stats.ipynb  totalseg.ipynb
notebooks/: nako.ipynb  nnUnet_setup.ipynb  patchwork_train.ipynb  patchwork_train_closer_to_nnunet copy.asciidoc
notebooks/.ipynb_checkpoints/: patchwork_train-checkpoint.ipynb
notebooks/comparison/: patchwork.ipynb  patchwork.py  patchwork_eval.py  patchwork_reproduce_oppscreen.py  patchwork_reproduce_oppscreen_eval.py  stats.ipynb
results/: results_interactive.ipynb
scripts/: README.md  compute_metrics.py  eval.ipynb  eval.py  nnunet.ipynb  patchwork_reproduce_oppscreen.py  patchwork_reproduce_oppscreen_eval.py  plot_nnunet_scores.py  plot_results.py  plot_scores.py  to_nora.ipynb
scripts/inference_benchmark/: nnunet.ipynb  patchwork.ipynb  patchwork.py  patchwork_sweep.py
scripts/nnunet_patchwork_comp/: 0_split_export_nora.ipynb  1_train_eval_nnunet.ipynb  2_eval.ipynb  3_extract_learning_curve_nnunet.py  3_extract_learning_curve_patchwork.py  4_plot_learning_curves.py  eval.py  nnunet.ipynb  (+1 more)
src/: compute_metrics.py
(+1 files in other folders)
