[project]
name = "whole-body-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "nibabel>=5.3.3",
    "numpy<2.0.0",
    "nvidia-cublas-cu11==11.11.3.6",
    "nvidia-cuda-runtime-cu11==11.8.89",
    "nvidia-cudnn-cu11==8.6.0.163",
    "pandas<2.0.0",
    "scipy>=1.15.3",
    "tensorflow[and-cuda]>=2.17",
]
